--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
 		"debug": "~2.6.9",
 		"dotenv": "^8.2.0",
 		"express": "~4.16.1",
 		"express-es6-template-engine": "^2.2.1",
-		"express-session": "^1.17.0",
 		"morgan": "~1.9.1",
 		"node-fetch": "^2.6.0",
-		"pg-promise": "^10.4.4",
-		"session-file-store": "^1.4.0"
+		"pg-promise": "^10.4.4"
 	}
 }
